crates/arity-parser/tests/snapshots/parser_snapshots__subset_missing_close_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected ',' between subset arguments",
        start: 4,
        end: 5,
    },
    ParseDiagnostic {
        message: "expected ',' between subset arguments",
        start: 8,
        end: 9,
    },
    ParseDiagnostic {
        message: "expected ',' between subset arguments",
        start: 10,
        end: 11,
    },
    ParseDiagnostic {
        message: "expected closing bracket in subset expression",
        start: 11,
        end: 12,
    },
    ParseDiagnostic {
        message: "expected closing bracket in subset expression",
        start: 5,
        end: 7,
    },
    ParseDiagnostic {
        message: "expected closing bracket in subset expression",
        start: 1,
        end: 2,
    },
]
