crates/arity-parser/tests/snapshots/parser_snapshots__subset_named_args_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..64
  SUBSET_EXPR@0..18
    IDENT@0..1 "x"
    LBRACK@1..2 "["
    ARG_LIST@2..17
      ARG@2..3
        IDENT@2..3 "i"
      COMMA@3..4 ","
      WHITESPACE@4..5 " "
      ARG@5..17
        IDENT@5..9 "drop"
        WHITESPACE@9..10 " "
        ASSIGN_EQ@10..11 "="
        WHITESPACE@11..12 " "
        IDENT@12..17 "FALSE"
    RBRACK@17..18 "]"
  NEWLINE@18..19 "\n"
  SUBSET2_EXPR@19..36
    IDENT@19..20 "x"
    LBRACK2@20..22 "[["
    ARG_LIST@22..34
      ARG@22..27
        IDENT@22..23 "a"
        WHITESPACE@23..24 " "
        ASSIGN_EQ@24..25 "="
        WHITESPACE@25..26 " "
        INT@26..27 "1"
      COMMA@27..28 ","
      WHITESPACE@28..29 " "
      ARG@29..34
        IDENT@29..30 "b"
        WHITESPACE@30..31 " "
        ASSIGN_EQ@31..32 "="
        WHITESPACE@32..33 " "
        INT@33..34 "2"
    RBRACK2@34..36 "]]"
  NEWLINE@36..37 "\n"
  SUBSET_EXPR@37..63
    IDENT@37..38 "x"
    LBRACK@38..39 "["
    ARG_LIST@39..62
      ARG@39..43
        IDENT@39..43 "rows"
      COMMA@43..44 ","
      WHITESPACE@44..45 " "
      ARG@45..49
        IDENT@45..49 "cols"
      COMMA@49..50 ","
      WHITESPACE@50..51 " "
      ARG@51..62
        IDENT@51..55 "drop"
        WHITESPACE@55..56 " "
        ASSIGN_EQ@56..57 "="
        WHITESPACE@57..58 " "
        IDENT@58..62 "TRUE"
    RBRACK@62..63 "]"
  NEWLINE@63..64 "\n"
