crates/arity-parser/tests/snapshots/parser_snapshots__subset_simple_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..27
  SUBSET_EXPR@0..4
    IDENT@0..1 "x"
    LBRACK@1..2 "["
    ARG_LIST@2..3
      ARG@2..3
        INT@2..3 "1"
    RBRACK@3..4 "]"
  NEWLINE@4..5 "\n"
  SUBSET_EXPR@5..12
    IDENT@5..6 "x"
    LBRACK@6..7 "["
    ARG_LIST@7..11
      ARG@7..8
        IDENT@7..8 "i"
      COMMA@8..9 ","
      WHITESPACE@9..10 " "
      ARG@10..11
        IDENT@10..11 "j"
    RBRACK@11..12 "]"
  NEWLINE@12..13 "\n"
  SUBSET_EXPR@13..19
    IDENT@13..14 "x"
    LBRACK@14..15 "["
    ARG_LIST@15..18
      ARG@15..15
      COMMA@15..16 ","
      WHITESPACE@16..17 " "
      ARG@17..18
        IDENT@17..18 "j"
    RBRACK@18..19 "]"
  NEWLINE@19..20 "\n"
  SUBSET_EXPR@20..26
    IDENT@20..21 "x"
    LBRACK@21..22 "["
    ARG_LIST@22..25
      ARG@22..25
        BINARY_EXPR@22..25
          INT@22..23 "1"
          COLON@23..24 ":"
          INT@24..25 "3"
    RBRACK@25..26 "]"
  NEWLINE@26..27 "\n"
