crates/arity-parser/tests/snapshots/parser_snapshots__unclosed_block_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected '}' to close block",
        start: 0,
        end: 1,
    },
]
