crates/arity-parser/tests/snapshots/parser_snapshots__user_operator_unterminated_diagnostics.snap
---
source: crates/arity-parser/tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "unexpected '%2'",
        start: 6,
        end: 8,
    },
]
