crates/arity-parser/tests/snapshots/parser_snapshots__while_missing_condition_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..15
  WHILE_EXPR@0..14
    WHILE_KW@0..5 "while"
    WHITESPACE@5..6 " "
    LPAREN@6..7 "("
    ERROR@7..7
    RPAREN@7..8 ")"
    WHITESPACE@8..9 " "
    IDENT@9..14 "value"
  NEWLINE@14..15 "\n"
