crates/arity-parser/tests/snapshots/parser_snapshots__while_missing_condition_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected condition expression after 'while'",
        start: 0,
        end: 5,
    },
]
